--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240804T033038Z
+"   /golfscore                                      20240804T041340Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/20686.html">Flappy Bird Clones :)                           : 0020686</a>
 <a href="q/1364.html">Detect rotated strings                          : 0001364</a>
 <a href="q/129404.html">Hello World! (Every other character Part 2)     : 0129404</a>
 <a href="q/266668.html">Print the banned characters based on the most co: 0266668</a>
