--- a/q/20686.html
+++ b/q/20686.html
@@ -26,14 +26,30 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>464</td><td>Javascript+jQuery ASCII Art  571 524 491</td><td>140308T060752Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/23452#23452">Robin</a></td></tr>
-<tr d-ix="1"><td>332</td><td>C</td><td>180817T133256Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/170778#170778">Peter Le</a></td></tr>
-<tr d-ix="2"><td>nan</td><td>Color Animation and Physics Pure JavaScript</td><td>180622T044356Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/167278#167278">ei2</a></td></tr>
-<tr d-ix="3"><td>nan</td><td></td><td>140309T071014Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/23556#23556">Max Chuq</a></td></tr>
-<tr d-ix="4"><td>1024</td><td>Floppy Dragon</td><td>140213T165001Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/20810#20810">xem</a></td></tr>
-<tr d-ix="5"><td>997</td><td>Javascript + jQuery</td><td>140213T123618Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/20785#20785">Michael </a></td></tr>
+<tr d-ix="0"><td>299</td><td>JavaScript NodeJS</td><td>240804T041340Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/274662#274662">noodle p</a></td></tr>
+<tr d-ix="1"><td>464</td><td>Javascript+jQuery ASCII Art  571 524 491</td><td>140308T060752Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/23452#23452">Robin</a></td></tr>
+<tr d-ix="2"><td>332</td><td>C</td><td>180817T133256Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/170778#170778">Peter Le</a></td></tr>
+<tr d-ix="3"><td>nan</td><td>Color Animation and Physics Pure JavaScript</td><td>180622T044356Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/167278#167278">ei2</a></td></tr>
+<tr d-ix="4"><td>nan</td><td></td><td>140309T071014Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/23556#23556">Max Chuq</a></td></tr>
+<tr d-ix="5"><td>1024</td><td>Floppy Dragon</td><td>140213T165001Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/20810#20810">xem</a></td></tr>
+<tr d-ix="6"><td>997</td><td>Javascript + jQuery</td><td>140213T123618Z</td><td><a href="https://codegolf.stackexchange.com/questions/20686/flappy-bird-clones/20785#20785">Michael </a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Javascript+jQuery (ASCII Art) - <del>571</del> <del>524</del> <del>491</del> 464</h1>
+<div id="pu0" class="pu"><h1>JavaScript (NodeJS), 299 bytes</h1>
+<pre class="lang-javascript prettyprint-override"><code>require('readline').emitKeypressEvents(p=process.stdin);p.setRawMode(1)
+p.on('keypress',_=&gt;v=.8)
+s=x=y=v=0
+setInterval(c=&gt;{x=x?x-.5:(z=5+new Date%10,s++,15)
+!x&amp;(y&lt;z|y&gt;z+2)|y&gt;25|y&lt;0?X:c.clear(y-=v-=.1)
+for(i=0;i&lt;25;i++)c.log((-~y-i?'':''+s).padEnd(x|0)+(i&gt;z&amp;i&lt;z+3?'':'|').padEnd(15)+'|')},40,console)
+</code></pre>
+<p>Play by pressing any key. The process ends with an error when you fail.</p>
+<p>If you have NodeJS installed, I encourage you to try it out! See if you can beat my high score of 14.</p>
+<p>This is quite heavily golfed, but I bet there's one or two little tricks yet to be found here. I tried to make the physics as accurate to the original as possible, though this version is a bit more lenient with collisions.</p>
+<p>I chose the simplest layout I could think of that still gives the impression of Flappy Bird and meets all the requirements. I have the score move up and down instead of displaying it separately, killing two birds with one stone. I think it needs to have two pipes on screen in order for the moving-horizontally effect to be sold, but the second pipe does not get its gap until you have cleared the first pipe.</p>
+<p>Here's a GIF of me playing the game. I only got to score 3 that time.</p>
+<p><img src="https://i.imgur.com/CbtYueQ.gif" alt="Me playing the game (poorly)" /></p>
+</div>
+<div id="pu1" class="pu"><h1>Javascript+jQuery (ASCII Art) - <del>571</del> <del>524</del> <del>491</del> 464</h1>
 <pre><code>l=$('[id$=52] h4~pre').click(()=&gt;{m=1}),o=[],d=0,e=4,m=1;setInterval(()=&gt;{t=Array(153);s=~~(d/10-0.99);d++;d%10?0:o[d+20]=~~(Math.random()*5)+1;for(i=-1;k=o[i+d],i&lt;17;i++)if(k--)for(j=-1;c=j==k||j-k==4?'-':j-k&gt;0&amp;&amp;j-k&lt;4?0:'|',j&lt;9;j++)i&gt;-1?t[j*17+i]=c:0,i&lt;16?t[j*17+i+1]=c:0;m-=.2;e-=m;if(e&lt;0||e&gt;10||t[~~e*17+8])e=4,m=1,d=0,o=[];t[~~e*17+8]='&gt;';r='|-------['+s+']-------';for(i=0;z=t[i]||' ',i&lt;153;i++)i%17?r+=z:r+='|\n|'+z;r+='|\n|-----------------|';l.html(r);},150)
 </code></pre>
 <blockquote>
@@ -64,9 +80,9 @@
 <p>Feel free to comment with your highscore.</p>
 <p>Also, this is my first Code Golf post, so suggestions on compression, etc. will be welcomed</p>
 </div>
-<div id="pu1" class="pu"><h1>C, <s>386</s> <s>351</s> <s>347</s> 341 bytes (Windows, MinGW), 332 with a terminal emulator</h1>
+<div id="pu2" class="pu"><h1>C, <s>386</s> <s>351</s> <s>347</s> 341 bytes (Windows, MinGW), 332 with a terminal emulator</h1>
 
-<p><a href="https://i.stack.imgur.com/3Uhxf.png" rel="nofollow noreferrer"><img src="https://i.stack.imgur.com/3Uhxf.png" alt="enter image description here"></a></p>
+<p><a href="https://i.sstatic.net/3Uhxf.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/3Uhxf.png" alt="enter image description here"></a></p>
 
 <p>Certainly not the prettiest entry, but it captures the core mechanics of flappy bird: The bird accelerates downwards, pressing a key makes him jump up, touching the pipes or the edges of the screen ends the game, score is the number of cleared pipes.</p>
 
@@ -82,7 +98,7 @@ char P[71];X,Y,W,s;main(v){srand(time(0));for(float y=1,t=0;!(v&lt;0|v&gt;6|(v&l
 char P[71];X,Y,W,s;main(v){srand(time(0));for(float y=1,t=0;!(v&lt;0|v&gt;6|(v&lt;Y|v&gt;=Y+W)&amp;X&gt;0&amp;X&lt;3);Sleep(99)){y+=t=kbhit()?getch(),-.9:t+.3;--X&lt;0?X=8,Y=rand()%3+1,W=rand()%2+2:X-1||++s;memset(P,32,70);for(v=0;v&lt;7;T(9)10,T(X)v&lt;Y|v++&gt;=Y+W?35:32);v=y;T(1)79;T(2)62;printf("\033c%s\nSCORE: %d",P,s);}}
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>Color Animation and Physics; Pure JavaScript, 457 (335) bytes</h1>
+<div id="pu3" class="pu"><h1>Color Animation and Physics; Pure JavaScript, 457 (335) bytes</h1>
 
 <p>This is my first post in this forum; I made this code and retrospectively found this thread to post it in. <br>
 Here's the code encapsulated in HTML, ready to be copy/pasted in to an html file:</p>
@@ -156,7 +172,7 @@ Here's the code encapsulated in HTML, ready to be copy/pasted in to an html file
 <pre><code>&lt;body style='margin:0'&gt;&lt;script&gt;var y=180,x=v=n=s=0,f=140,c=document.createElement('canvas'),p=c.getContext('2d');c.width=280;c.height=400;c.onclick=function(){v-=6};c.style='width:68vh;height:97vh';document.body.appendChild(c);p.font="50px Arial";p.shadowColor='#444';p.shadowBlur=9;p.shadowOffsetX=p.shadowOffsetY=5;function r(h,t,k=0,i='#0f0',j='#0a0',u=0,l=0,w=40){var g=p.createLinearGradient(h,l,h+40,u);g.addColorStop(0,i);g.addColorStop(1,j);p.fillStyle=g;p.fillRect(h,k,w,t);}b=setInterval(function(){if(x==0){n=f;f=Math.floor(280*Math.random());}x=x==0?159:x-1;v+=.1;y+=v;r(0,400,0,'#08c','#0cf',280,0,280);r(20,40,y,'#ff0','#fa0',y+40,y);r(x-40,n);r(x-50,20,n-20,'#0f0','#0a0',n+20,n,60);r(x+120,f);r(x+110,20,f-20,'#0f0','#0a0',f+20,f,60);r(x-40,280-n,n+120);r(x-50,20,n+120,'#0f0','#0a0',n+140,n+100,60);r(x+120,280-f,f+120);r(x+110,20,f+120,'#0f0','#0a0',f+140,f+100,60);if(x==60){s++;}p.fillStyle='#fff';p.fillText(s,120,80);if(x&gt;20&amp;&amp;x&lt;100&amp;&amp;(y&lt;n||y&gt;n+80)||y&lt;0||y&gt;360){clearInterval(b);location.reload();}},15);&lt;/script&gt;&lt;br&gt;Made by Thomas Kaldahl&lt;/body&gt;
 </code></pre>
 
-<p><a href="https://i.stack.imgur.com/eIyVb.jpg" rel="nofollow noreferrer"><img src="https://i.stack.imgur.com/eIyVb.jpg" alt=""></a></p>
+<p><a href="https://i.sstatic.net/eIyVb.jpg" rel="nofollow noreferrer"><img src="https://i.sstatic.net/eIyVb.jpg" alt=""></a></p>
 
 <p>Also, is it cheating to use a compression system like DEFLATE?<br>
 Below is the ASCII85 code for a DEFLATEd version of the code:<br>
@@ -164,11 +180,11 @@ By the way, compressed it is 335 bytes total.<br>
 <br>
 Gapon95_Wi'Kf'c(i##6'h,+cM\JZeFO&lt;h;$W'#A1',RqNigBH02C'#R$m]&lt;i&lt;X#6GR`2pE&lt;Ri5mu-n%cVPrsJe:*R^pnr9bI@[DAZnPP02A^!.$MN/@`U7l5gm!!Vr4>A;P?u[Pk8]jCnOP%dIu?`fWql>"tuO4/KbIWgK;7/iJN'f2,hnFg8e.^SO*t\*`,3JBn6j(f`O#],M0;5Sa35Zc@*XaBs@N%]k\M76qa[.ie7n(^*Z5G-lfhUZ3F#'%,X17Pj1u]L)LjpO6XbIl%N3tJhTsab8oV1T(?MC$9mT;90VMmnfBNKEY(^'UV4c?SW':X(!4,*WCY+f;19eQ?`FK0I"(uDe:f&amp;XV&amp;^Rc+'SWRIbd8Lj9bG.l(MRUc1G8HoUsn#H\V(8"Y$/TT(^kATb(OreGfWH7uIf</p>
 </div>
-<div id="pu3" class="pu"><h1>Objective C - ungolfed</h1>
+<div id="pu4" class="pu"><h1>Objective C - ungolfed</h1>
 
 <p>Possibly the worst code I have ever written.</p>
 
-<p><img src="https://i.stack.imgur.com/pFMhc.png" alt="Hacky Bird Running"></p>
+<p><img src="https://i.sstatic.net/pFMhc.png" alt="Hacky Bird Running"></p>
 
 <p>You can download the binary here: <a href="http://www.mediafire.com/download/6stxhbzr11ovty3/AsciiBird" rel="nofollow noreferrer">AsciiBird Download Binary</a></p>
 
@@ -387,7 +403,7 @@ struct ABPoint {
 @end
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h2>Floppy Dragon, JavaScript, 1024b</h2>
+<div id="pu5" class="pu"><h2>Floppy Dragon, JavaScript, 1024b</h2>
 
 <p>I'm making this game for the current js1k compo ( <a href="http://js1k.com" rel="nofollow">http://js1k.com</a> )</p>
 
@@ -398,7 +414,7 @@ struct ABPoint {
 
 <p>All feedbacks and new ideas are welcome!</p>
 </div>
-<div id="pu5" class="pu"><h2>Javascript + jQuery (997)</h2>
+<div id="pu6" class="pu"><h2>Javascript + jQuery (997)</h2>
 
 <p><em>Tested on Chrome 32, Firefox 27, IE9</em>  </p>
 
@@ -408,7 +424,7 @@ struct ABPoint {
 </code></pre>
 
 <blockquote>
-  <p><img src="https://i.stack.imgur.com/Ep7vZ.jpg" alt="enter image description here"><br>
+  <p><img src="https://i.sstatic.net/Ep7vZ.jpg" alt="enter image description here"><br>
   <em>The game replace the question block of this page.</em><br>
   <em>You have to click on the game frame to make the bird fly.</em></p>
 </blockquote>
