--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240804T123537Z
+"   /golfscore                                      20240804T132447Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/430.html">Drawing a gradient in ASCII art                 : 0000430</a>
 <a href="q/219576.html">Print 0 to 100 without 1-9 characters           : 0219576</a>
 <a href="q/153161.html">Confusing Alphabet Staircase                    : 0153161</a>
 <a href="q/193502.html">Approximate the perfect fifth                   : 0193502</a>
