--- a/q/1364.html
+++ b/q/1364.html
@@ -81,7 +81,7 @@
 <tr d-ix="52"><td>115</td><td>Lua</td><td>110309T121643Z</td><td><a href="https://codegolf.stackexchange.com/questions/1364/detect-rotated-strings/1365#1365">jpjacobs</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1><a href="https://github.com/CREAsTIVE/StackControl/commit/bb097dc1f2105a7c84af63e861bdf9ddf685d0dd" rel="nofollow noreferrer">StackControl</a>, 35 characters</h1>
-<pre><code>R⁜⦽0←:⬌(↶⁞=(1←)?)⟲→(&quot;yes&quot;W)(&quot;no&quot;W)⁇
+<pre><code>R⁜⦽0←:⬌(↶⁞=(1←)?)⟲→(&quot;Yes&quot;W)(&quot;No&quot;W)⁇
 </code></pre>
 <p>Works with stdin and stdout (commands <code>R</code> and <code>W</code> can be changed later)</p>
 <h2>Explanation:</h2>
