--- a/q/274665.html
+++ b/q/274665.html
@@ -26,9 +26,76 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>181</td><td>Python + SymPy</td><td>240804T134410Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274669#274669">shape wa</a></td></tr>
+<tr d-ix="0"><td>024</td><td>Jelly</td><td>240804T210958Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274680#274680">Jonathan</a></td></tr>
+<tr d-ix="1"><td>106</td><td>Charcoal</td><td>240804T210812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274679#274679">Neil</a></td></tr>
+<tr d-ix="2"><td>181</td><td>Python + SymPy</td><td>240804T134410Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274669#274669">shape wa</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a> + <a href="https://www.sympy.org/en/index.html" rel="nofollow noreferrer">SymPy</a>, 181 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 24 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>.ṭ2ịÆfȧḍ¥€Ʋ3ƤḄ3ḍȦ
+ŻŒ!ÇƇḢ
+</code></pre>
+<p>A monadic link that accepts a non-negative integer and yields the permutation as a list if possible or the integer zero if not.</p>
+<p><strong><a href="https://tio.run/##AUIAvf9qZWxsef//LuG5rTLhu4vDhmbIp@G4jcKl4oKsxrIzxqThuIQz4biNyKYKxbvFkiHDh8aH4bii/8OHxZLhuZj//zY" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> (Times out for 8 or more.)</p>
+<h4>How?</h4>
+<pre><code>ŻŒ!ÇƇḢ - Main Link: non-negative integer, N
+Ż      - zero range -&gt; [0..N]
+ Œ!    - all permutations (sorsted lexicographically)
+    Ƈ  - filter keep those for which:
+   Ç   -   call Link 1 - f(Permutation)
+     Ḣ - head -&gt; the first remaining Permutation or 0 if none exist
+
+.ṭ2ịÆfȧḍ¥€Ʋ3ƤḄ3ḍȦ - Link 1: Permutation
+.ṭ                - tack a 0.5 to the right
+           3Ƥ     - for all slices of three values:
+          Ʋ       -   last four links as a monad:
+  2               -     two
+   ị              -     index into -&gt; middle value
+    Æf            -     prime factors (1 gives []; 0 gives [0])
+         €        -     for each:
+        ¥         -       last two links as a dyad - f(Factor, Slice)
+       ḍ          -         divides? (vectorises)
+      ȧ           -         {Factor} logical AND {that} (replace result at 0 with [0])
+             Ḅ    - convert from binary
+              3ḍ  - test if 3 divides each (i.e. each was either [0], [1,1,0] or [0,1,1])
+                Ạ - any and all?
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 106 bytes</h1>
+<pre><code>ＮθＦ…·²θＦ⬤υ﹪ικ⊞υι≔Ｅ⊕θΦυ∧ι¬﹪ιλη≔Ｅη⟦κι⟦⟧⟧ζＦζ«≔⊟ιδ≔⊟ιεＦ⊕θ¿¬∨№ικ⊙ε﹪κλ¿⬤δ﹪κλ⊞ζ⁺⁺⟦κ⟧ι⎇§ι⁰⟦⁻§ηκεε⟧⟦⟦⟧§ηκ⟧»Ｉ⌊Φζ›Ｌιθ
+</code></pre>
+<p><a href="https://tio.run/##XVDLasMwEDzXX7HHFahQeis5mUBLoElN6c34oMabWFiWElkKTUq/3V05cR8xWDYzq5nZWTfKr50yw7CwuxhWsXsnj3sxyzbOAy7s2sReH@hV2S3hvYS9EDBSuTEYJSxdHY1DLaEVTBWxbxKsWSHve721uFS7pOOpIxuoZnEJj9oE9uHB3Nbp8soF/JUyIj0Smv8qjYSyZW3@VBXTpynmScBndnOZLNwONbM1s9cYJWza7E8iAXoDmEK8eJy7aMN5o5TviPSzZjtlG@dTBfU1d67gJKHg5nA8yrZKjUh4I2@VP2IeFramj@Rxx3C51JbHJrQ5O1N6@WJZ8vGPq9hmln1lhdccdK567k5b3cUOL8Wy/ZMnlX6fyW5DM26/H6PPhuFhuD2Ybw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Trying an &quot;efficient&quot; (it used to be able to reach <code>n=10</code> before I finished golfing; <a href="https://tio.run/##XVBBasMwEDzXr9BRAhXSXnNyAy2BJjWht@CDGm9sYVmyZSk0KX27u2snbROBkL0zGs3MrlJ@55QZhqVtY1jH5gM878Q82TvP@NLuTOz1ATbKlsAfJeuEYCOUGsOjZCtXROO4lqwWCGWxr2isUSHte11avlIt6XhowAYoUFyyZ20CvoPE1BZ0ee0C/5MygpZk1bVKJdm2Rm088hzh08XmSbCv5O7MzFzLNaIForczoNkl2T9Hguk942TizfOFizZMicjfkcNvzPribeRTBcUtNlVwkizD5kjlHbxV/sifVA/0PxNTjJW2SEjD0hbwSdnq0SDufCJs8byCc5SfJ99J5jUaXKgeO9NWN7EZ6zmXik@/eFD0@Qq2DNWYvKM@N3AATy7GDPNheJgN9wfzAw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a>) algorithm first that can reach <code>n=9</code> on TIO.</p>
+<pre><code>Ｎθ
+</code></pre>
+<p>Input <code>n</code>.</p>
+<pre><code>Ｆ…·²θＦ⬤υ﹪ικ⊞υι
+</code></pre>
+<p>Find all the primes up to <code>n</code>.</p>
+<pre><code>≔Ｅ⊕θΦυ∧ι¬﹪ιλη
+</code></pre>
+<p>For all the numbers up to <code>n</code>, get a list of primes that are factors of it, except for <code>0</code>, where we use an empty list.</p>
+<pre><code>≔Ｅη⟦κι⟦⟧⟧ζ
+</code></pre>
+<p>Starting from the last element in the list working backwards, create trial suffixes of the list containing all potential last elements, their prime factors (which the next number needs to be divisible by) and an empty list of factors that the next number must not be divisible by.</p>
+<pre><code>Ｆζ«≔⊟ιδ≔⊟ιε
+</code></pre>
+<p>Loop over the trial suffixes and extract the lists of excluded and required prime factors.</p>
+<pre><code>Ｆ⊕θ
+</code></pre>
+<p>Loop over the numbers up to <code>n</code>.</p>
+<pre><code>¿¬∨№ικ⊙ε﹪κλ
+</code></pre>
+<p>Ensure that it's not already in the list and is divisible by all of the required prime factors.</p>
+<pre><code>¿⬤δ﹪κλ
+</code></pre>
+<p>Ensure that it's not divisible by any of the excluded prime factors.</p>
+<pre><code>⊞ζ⁺⁺⟦κ⟧ι⎇§ι⁰⟦⁻§ηκεε⟧⟦⟦⟧§ηκ⟧
+</code></pre>
+<p>Prefix the number to the trial suffix and append the new required and excluded prime factors, which depend on whether the previous trial suffix began with <code>0</code>; if it did then there are no required prime factors and the excluded prime factors are all of the number's prime factors, while if it didn't then the required prime factors are the number's prime factors that remain after the previously required prime factors are removed and the excluded prime factors are the previously required prime factors.</p>
+<pre><code>»Ｉ⌊Φζ›Ｌιθ
+</code></pre>
+<p>Output the lexicographically earliest complete list.</p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a> + <a href="https://www.sympy.org/en/index.html" rel="nofollow noreferrer">SymPy</a>, 181 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda n:next(l for l in i.permutations(range(n+1))if all(all((a%f&gt;0)^(c%f&gt;0)for f in sympy.factorint(b)if f)for(a,b),(_,c)in p(p(l+(1,)))))
 import itertools as i,sympy
 p=i.pairwise
