--- a/q/90497.html
+++ b/q/90497.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>104</td><td>Setanta</td><td>240804T205938Z</td><td><a href="https://codegolf.stackexchange.com/questions/90497/alphabet-triangle-strikes-again/274678#274678">bb94</a></td></tr>
+<tr d-ix="0"><td>093</td><td>Setanta</td><td>240804T205938Z</td><td><a href="https://codegolf.stackexchange.com/questions/90497/alphabet-triangle-strikes-again/274678#274678">bb94</a></td></tr>
 <tr d-ix="1"><td>242</td><td>brainfuck</td><td>240804T202840Z</td><td><a href="https://codegolf.stackexchange.com/questions/90497/alphabet-triangle-strikes-again/274675#274675">Andrew B</a></td></tr>
 <tr d-ix="2"><td>009</td><td>Vyxal j</td><td>220602T190629Z</td><td><a href="https://codegolf.stackexchange.com/questions/90497/alphabet-triangle-strikes-again/248107#248107">naffetS</a></td></tr>
 <tr d-ix="3"><td>009</td><td>05AB1E</td><td>220602T190948Z</td><td><a href="https://codegolf.stackexchange.com/questions/90497/alphabet-triangle-strikes-again/248108#248108">naffetS</a></td></tr>
@@ -85,10 +85,10 @@
 <tr d-ix="56"><td>129</td><td>JavaScript</td><td>160821T114351Z</td><td><a href="https://codegolf.stackexchange.com/questions/90497/alphabet-triangle-strikes-again/90503#90503">Quill</a></td></tr>
 <tr d-ix="57"><td>090</td><td>Mathematica</td><td>160821T112024Z</td><td><a href="https://codegolf.stackexchange.com/questions/90497/alphabet-triangle-strikes-again/90500#90500">LegionMa</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 104 bytes</h1>
-<pre><code>s:=&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;k:=0le i idir(0,26){t:=&quot;&quot;le j idir(0,2*i+1){t+=s[k]k=(k+1)%26}scriobh(t)}
+<div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, <s>104</s> 93 bytes</h1>
+<pre><code>s:=&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;*26le i idir(0,26){i=2*i+1scriobh(cuid@s(0,i))s=cuid@s(i,999)}
 </code></pre>
-<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDQ79uOCw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
+<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICwtc-ZCw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/TryItOnline/brainfuck" rel="nofollow noreferrer">brainfuck</a>, 242 bytes</h1>
 <pre><code>++++++++[-&gt;++++++++&lt;]&gt;+&gt;++++++++++&gt;++++++++++++++++++++++++++&gt;++++++++++++++++++++++++++&gt;+&gt;&gt;+&gt;+&lt;&lt;&lt;&lt;&lt;[-&gt;&gt;[-&lt;&lt;&lt;&lt;.+&gt;&gt;&gt;-[&gt;&gt;&gt;&gt;[-]]&gt;&gt;&gt;&gt;[-&lt;&lt;&lt;&lt;++++++++++++++++++++++++++&lt;&lt;&lt;--------------------------&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;]&lt;&lt;&lt;&lt;+&lt;&lt;&lt;]&lt;&lt;&lt;.&gt;&gt;&gt;&gt;&gt;++[-&lt;+&lt;+&gt;&gt;]&lt;[-&gt;+&lt;]&lt;&lt;&lt;]
@@ -165,7 +165,7 @@ kA        # Push the uppercase alphabet
 <p><a href="https://tio.run/##yy9OTMpM/f/f0cjs8PQjjYe22xxafGj3//8A" rel="nofollow noreferrer" title="05AB1E – Try It Online">Try it online!</a></p>
 <p>Outputs a zillion trailing newlines, but whatever.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/ConorOBrien-Foxx/Pyramid-Scheme" rel="nofollow noreferrer">Pyramid Scheme</a>, 1492 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/ConorOBrien-Foxx/Pyramid-Scheme" rel="noreferrer">Pyramid Scheme</a>, 1492 bytes</h1>
 <pre><code>    ^         ^
    / \       / \
   /set\     /do \
@@ -217,7 +217,7 @@ kA        # Push the uppercase alphabet
                          ---/25 \     /65 \---
                             -----     -----
 </code></pre>
-<p><a href="https://tio.run/##hVRJbsMwDLzrFew5MFgHSG9FH1JWQDYgPQQpkvTQ17tcJTmLLcCJLJJDzlD0z995ffzedZftYX/cDwPwyhArJ/5BIH/lHR/gZX@1E9yd5CR3siTKdwnXpG/s8iI7/KTEBjvKvhNHCLf3EqA5iiOj8oOn36scZ4cQfP73bBEHcsCpaq0SuuqBoIABbg9nrdmiYRSsaF3wV4tQrIByBE15jtm/ejYwsgAuBzhsRFZK8niIZedSt8oKnJDKzGBSpUGnJm1RPEmk6o0LCuhk/G4SpqiQ3XFJkTgq10SsoPVXu9M1d8HpckZoDFK0Ino3w6DZDdIMLRaEUAkemerduLWZosWGX1TRrE/FGAqpLa6sit4AjZjVaIS4joVg16AbnN@FVmZ3iBY1VBkE@wKBGxoNVhXfWSXbI3Q9wf1qBfJrfO9SZunpkgJitJ47CdmYjafrXsPHYEb8g@YcR6rO8bCvjE6QDjdM16mTMsuofJO8hgXN0M/KTrqcp6HVDSjGTZqwoUkpcLmKr9DbSiMnSdYrobth@Ac" rel="nofollow noreferrer" title="Pyramid Scheme – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##hVRJbsMwDLzrFew5MFgHSG9FH1JWQDYgPQQpkvTQ17tcJTmLLcCJLJJDzlD0z995ffzedZftYX/cDwPwyhArJ/5BIH/lHR/gZX@1E9yd5CR3siTKdwnXpG/s8iI7/KTEBjvKvhNHCLf3EqA5iiOj8oOn36scZ4cQfP73bBEHcsCpaq0SuuqBoIABbg9nrdmiYRSsaF3wV4tQrIByBE15jtm/ejYwsgAuBzhsRFZK8niIZedSt8oKnJDKzGBSpUGnJm1RPEmk6o0LCuhk/G4SpqiQ3XFJkTgq10SsoPVXu9M1d8HpckZoDFK0Ino3w6DZDdIMLRaEUAkemerduLWZosWGX1TRrE/FGAqpLa6sit4AjZjVaIS4joVg16AbnN@FVmZ3iBY1VBkE@wKBGxoNVhXfWSXbI3Q9wf1qBfJrfO9SZunpkgJitJ47CdmYjafrXsPHYEb8g@YcR6rO8bCvjE6QDjdM16mTMsuofJO8hgXN0M/KTrqcp6HVDSjGTZqwoUkpcLmKr9DbSiMnSdYrobth@Ac" rel="noreferrer" title="Pyramid Scheme – Try It Online">Try it online!</a></p>
 <p>Why? Why not?</p>
 </div>
 <div id="pu5" class="pu"><h1><a href="http://kx.com/download/" rel="nofollow noreferrer">K4</a>, 25 bytes</h1>
