--- a/q/274665.html
+++ b/q/274665.html
@@ -37,9 +37,10 @@
 <p>A monadic link that accepts a non-negative integer and yields the permutation as a list if possible or the integer zero if not.</p>
 <p><strong><a href="https://tio.run/##AUIAvf9qZWxsef//LuG5rTLhu4vDhmbIp@G4jcKl4oKsxrIzxqThuIQz4biNyKYKxbvFkiHDh8aH4bii/8OHxZLhuZj//zY" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> (Times out for 8 or more.)</p>
 <h4>How?</h4>
+<p>Convert condition 1 into another instance of condition 2 by appending a <span class="math-container">\$\frac{1}{2}\$</span> to the right of each permutation being tested.</p>
 <pre><code>ŻŒ!ÇƇḢ - Main Link: non-negative integer, N
 Ż      - zero range -&gt; [0..N]
- Œ!    - all permutations (sorsted lexicographically)
+ Œ!    - all permutations (sorted lexicographically)
     Ƈ  - filter keep those for which:
    Ç   -   call Link 1 - f(Permutation)
      Ḣ - head -&gt; the first remaining Permutation or 0 if none exist
