--- a/q/274485.html
+++ b/q/274485.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>014</td><td>K ngn/k</td><td>240804T212950Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274681#274681">Fmbalbue</a></td></tr>
-<tr d-ix="1"><td>003</td><td>Stack control this commit</td><td>240803T205004Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274654#274654">Швеев Ал</a></td></tr>
+<tr d-ix="0"><td>003</td><td>Stack control</td><td>240803T205004Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274654#274654">Швеев Ал</a></td></tr>
+<tr d-ix="1"><td>014</td><td>K ngn/k</td><td>240804T212950Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274681#274681">Fmbalbue</a></td></tr>
 <tr d-ix="2"><td>022</td><td>R</td><td>240801T160236Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274617#274617">Giuseppe</a></td></tr>
 <tr d-ix="3"><td>015</td><td>Ruby</td><td>240731T180311Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274601#274601">int 21h </a></td></tr>
 <tr d-ix="4"><td>026</td><td>Desmos</td><td>240801T020454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274606#274606">Aiden Ch</a></td></tr>
@@ -59,7 +59,16 @@
 <tr d-ix="30"><td>002</td><td>APL Dyalog Vision</td><td>240728T095611Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274487#274487">Ad&#225;</a></td></tr>
 <tr d-ix="31"><td>002</td><td>Vyxal</td><td>240728T095024Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274486#274486">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 14 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/CREAsTIVE/StackControl" rel="nofollow noreferrer">Stack control</a>, 3 characters:</h1>
+<pre><code>∪⟄⟸
+</code></pre>
+<h2>Explanation:</h2>
+<pre><code>∪ - union (removes all duplicates)
+⟄ - pop last element from array
+⟸ - hard shift (removes original array)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 14 bytes</h1>
 <pre><code>{x@|/x?!1+|/x}
 </code></pre>
 <p><a href="https://ngn.bitbucket.io/k#eJxLs6qucKjRr7BXNNQGUrVcXGkKhgrGCiYKpgrmYNpIwRwsZgQVNQHSRgqGUDE4BPMtLSHKkDSYgdkICFJoqWABNNxMwRTIBhlmysUFAG5yGWw=" rel="nofollow noreferrer">Try it online!</a></p>
@@ -71,15 +80,6 @@
      x?        find every element index
    |/          pick the newest element index
  x@            index
-</code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/CREAsTIVE/StackControl" rel="nofollow noreferrer">Stack control</a> (<a href="https://github.com/CREAsTIVE/StackControl/commit/6fe9063ffba2111a1c41774a362f310d83911c70" rel="nofollow noreferrer">this commit</a>), 3 bytes:</h1>
-<pre><code>∪⟄⟸
-</code></pre>
-<h2>Explanation:</h2>
-<pre><code>∪ - union
-⟄ - pop last element from string
-⟸ - pop before (pop original array from the stack)
 </code></pre>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 22 bytes</h1>
