--- a/q/274665.html
+++ b/q/274665.html
@@ -26,11 +26,50 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>024</td><td>Jelly</td><td>240804T210958Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274680#274680">Jonathan</a></td></tr>
-<tr d-ix="1"><td>106</td><td>Charcoal</td><td>240804T210812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274679#274679">Neil</a></td></tr>
-<tr d-ix="2"><td>181</td><td>Python + SymPy</td><td>240804T134410Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274669#274669">shape wa</a></td></tr>
+<tr d-ix="0"><td>224</td><td>Picat</td><td>240805T050107Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274686#274686">Bubbler</a></td></tr>
+<tr d-ix="1"><td>024</td><td>Jelly</td><td>240804T210958Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274680#274680">Jonathan</a></td></tr>
+<tr d-ix="2"><td>106</td><td>Charcoal</td><td>240804T210812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274679#274679">Neil</a></td></tr>
+<tr d-ix="3"><td>181</td><td>Python + SymPy</td><td>240804T134410Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274669#274669">shape wa</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 24 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="http://picat-lang.org" rel="nofollow noreferrer">Picat</a>, 224 bytes</h1>
+<pre><code>import cp.
+f(N)=A,N&lt;17=&gt;A=new_list(N+1),A::0..N,A.all_distinct,table_in(zip(A,A[2..N+1],A[3..N+1]++[1]),[{X,Y,Z}:X in 0..N,Y in 0..N,Z in 0..N,foreach(P in[2,3,5,7,11,13])Y&lt;1;Y mod P&gt;0;X*Z mod P&lt;1,(X+Z)mod P&gt;0 end]),A.solve.
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=PZDNaoNAFIXX8SmGQGCst0MmtqQYFeYBOmTpT0WsjnRAR9FphZY-STfZ5KG666Nk0pjsPu499xzu-Tn2siz04XB81_X90--fbPtu0KjsiVVjbgcMuE-3QcgCJaa8kaPG3KE2MM9bE8KBkaJp8srMpSo16OK1EblU-FP2mAFLN0bk0MyQeyHHSWlmQ_oVQQzJtxchqdC_VXyj5EZ1N4iifMN7M0k34MIjbIFSoG5mxz7dxajtKrQP17voLrmwTwFHTmLPCyRUZfIYGbvmQ5D5z-e2MBFBaC2uCfycSQmhD7a1WDA1ogCdGwA0DVKLGi9XlTlAq-lFLQFxQEZjpMZ-Nr2WeAI" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Given N, returns the lexicographically smallest permutation that satisfies the condition if such an answer exists, and fails otherwise. It fails immediately when N &gt;= 17 based on <a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int#comment591164_274665">my own comment</a>, so that I could hardcode the small primes instead of dynamically computing them.</p>
+<p>Solves N = 1 through 14 in a minute. For N = 16, I had to switch to <code>sat</code> solver and repeatedly constrain the answer to lexicographically earlier than already found to get the answer. The <code>cp</code> solver assigns values to variables in the given order (i.e. from left to right) and values from smallest to largest, so it finds the lexicographically smallest answer by default.</p>
+<p>The full list of solutions are presented below:</p>
+<pre><code>1 =&gt; [0,1]
+2 =&gt; [0,2,1]
+3 =&gt; [1,2,0,3]
+4 =&gt; [0,3,1,2,4]
+5 =&gt; [1,2,4,3,0,5]
+6 =&gt; [1,2,0,5,3,6,4]
+7 =&gt; [2,1,3,6,4,5,0,7]
+8 =&gt; [1,2,4,3,6,8,5,0,7]
+9 =&gt; [3,1,2,4,5,0,7,8,6,9]
+10 =&gt; [1,2,4,3,9,5,10,8,7,0,6]
+11 =&gt; [6,1,2,4,3,9,5,10,8,7,0,11]
+12 =&gt; [1,2,4,3,6,8,5,10,12,9,7,0,11]
+13 =&gt; [7,1,2,4,3,6,8,5,10,12,9,11,0,13]
+14 =&gt; [2,1,3,6,4,5,10,8,7,14,12,9,11,0,13]
+16 =&gt; [11,1,2,4,3,6,8,5,10,12,9,7,14,16,13,0,15]
+</code></pre>
+<p>A brief explanation of code:</p>
+<ul>
+<li><code>A=new_list(N+1),A::0..N,A.all_distinct</code> specifies that <code>A</code> is a permutation containing 0 through N inclusive.</li>
+<li><code>table_in</code> specifies that each tuple of variables must appear in the list of allowed tuples.
+<ul>
+<li><code>zip(A,A[2..N+1],A[3..N+1]++[1])</code> creates the list of 3-tuples that contain 3 consecutive elements of A, plus the last two with constant 1 attached.</li>
+<li><code>[{X,Y,Z}:X in 0..N,Y in 0..N,Z in 0..N,...]</code> creates the list of allowed 3-tuples that satisfy the condition &quot;for each prime P, if P is a prime factor of Y, P divides exactly one of X or Z&quot;.</li>
+<li><code>foreach(P in[2,3,5,7,11,13]) ... end</code> specifies that the loop body must be satisfied for all P's in the list.</li>
+<li><code>Y&lt;1;Y mod P&gt;0;X*Z mod P&lt;1,(X+Z)mod P&gt;0</code> is satisfied if &quot;Y is 0&quot; or &quot;P does not divide Y&quot; or &quot;exactly one of X and Z is divisible by P&quot;. <code>;</code> is logical OR and <code>,</code> is logical AND, and <code>,</code> has higher precedence.</li>
+</ul>
+</li>
+<li>Finally <code>A.solve</code> invokes the CP solver to instantiate A with the first solution found, if any.</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 24 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>.ṭ2ịÆfȧḍ¥€Ʋ3ƤḄ3ḍȦ
 ŻŒ!ÇƇḢ
 </code></pre>
@@ -61,7 +100,7 @@
                 Ạ - any and all?
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 106 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 106 bytes</h1>
 <pre><code>ＮθＦ…·²θＦ⬤υ﹪ικ⊞υι≔Ｅ⊕θΦυ∧ι¬﹪ιλη≔Ｅη⟦κι⟦⟧⟧ζＦζ«≔⊟ιδ≔⊟ιεＦ⊕θ¿¬∨№ικ⊙ε﹪κλ¿⬤δ﹪κλ⊞ζ⁺⁺⟦κ⟧ι⎇§ι⁰⟦⁻§ηκεε⟧⟦⟦⟧§ηκ⟧»Ｉ⌊Φζ›Ｌιθ
 </code></pre>
 <p><a href="https://tio.run/##XVDLasMwEDzXX7HHFahQeis5mUBLoElN6c34oMabWFiWElkKTUq/3V05cR8xWDYzq5nZWTfKr50yw7CwuxhWsXsnj3sxyzbOAy7s2sReH@hV2S3hvYS9EDBSuTEYJSxdHY1DLaEVTBWxbxKsWSHve721uFS7pOOpIxuoZnEJj9oE9uHB3Nbp8soF/JUyIj0Smv8qjYSyZW3@VBXTpynmScBndnOZLNwONbM1s9cYJWza7E8iAXoDmEK8eJy7aMN5o5TviPSzZjtlG@dTBfU1d67gJKHg5nA8yrZKjUh4I2@VP2IeFramj@Rxx3C51JbHJrQ5O1N6@WJZ8vGPq9hmln1lhdccdK567k5b3cUOL8Wy/ZMnlX6fyW5DM26/H6PPhuFhuD2Ybw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Trying an &quot;efficient&quot; (it used to be able to reach <code>n=10</code> before I finished golfing; <a href="https://tio.run/##XVBBasMwEDzXr9BRAhXSXnNyAy2BJjWht@CDGm9sYVmyZSk0KX27u2snbROBkL0zGs3MrlJ@55QZhqVtY1jH5gM878Q82TvP@NLuTOz1ATbKlsAfJeuEYCOUGsOjZCtXROO4lqwWCGWxr2isUSHte11avlIt6XhowAYoUFyyZ20CvoPE1BZ0ee0C/5MygpZk1bVKJdm2Rm088hzh08XmSbCv5O7MzFzLNaIForczoNkl2T9Hguk942TizfOFizZMicjfkcNvzPribeRTBcUtNlVwkizD5kjlHbxV/sifVA/0PxNTjJW2SEjD0hbwSdnq0SDufCJs8byCc5SfJ99J5jUaXKgeO9NWN7EZ6zmXik@/eFD0@Qq2DNWYvKM@N3AATy7GDPNheJgN9wfzAw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a>) algorithm first that can reach <code>n=9</code> on TIO.</p>
@@ -96,7 +135,7 @@
 </code></pre>
 <p>Output the lexicographically earliest complete list.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a> + <a href="https://www.sympy.org/en/index.html" rel="nofollow noreferrer">SymPy</a>, 181 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a> + <a href="https://www.sympy.org/en/index.html" rel="nofollow noreferrer">SymPy</a>, 181 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda n:next(l for l in i.permutations(range(n+1))if all(all((a%f&gt;0)^(c%f&gt;0)for f in sympy.factorint(b)if f)for(a,b),(_,c)in p(p(l+(1,)))))
 import itertools as i,sympy
 p=i.pairwise
