--- a/q/262098.html
+++ b/q/262098.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>048</td><td>YASEPL</td><td>240207T235747Z</td><td><a href="https://codegolf.stackexchange.com/questions/262098/wrt-hello-world-prgrm-bt-wth-n-vwls/269877#269877">madeforl</a></td></tr>
-<tr d-ix="1"><td>nan</td><td>Got it</td><td>230920T164816Z</td><td><a href="https://codegolf.stackexchange.com/questions/262098/wrt-hello-world-prgrm-bt-wth-n-vwls/265403#265403">J Je</a></td></tr>
+<tr d-ix="0"><td>166</td><td>JavaScript Node.js</td><td>240805T063118Z</td><td><a href="https://codegolf.stackexchange.com/questions/262098/wrt-hello-world-prgrm-bt-wth-n-vwls/274688#274688">Andrew B</a></td></tr>
+<tr d-ix="1"><td>048</td><td>YASEPL</td><td>240207T235747Z</td><td><a href="https://codegolf.stackexchange.com/questions/262098/wrt-hello-world-prgrm-bt-wth-n-vwls/269877#269877">madeforl</a></td></tr>
 <tr d-ix="2"><td>011</td><td>Japt</td><td>230705T145341Z</td><td><a href="https://codegolf.stackexchange.com/questions/262098/wrt-hello-world-prgrm-bt-wth-n-vwls/262436#262436">Luis fel</a></td></tr>
 <tr d-ix="3"><td>723</td><td>05AB1E</td><td>230629T090807Z</td><td><a href="https://codegolf.stackexchange.com/questions/262098/wrt-hello-world-prgrm-bt-wth-n-vwls/262301#262301">Kevin Cr</a></td></tr>
 <tr d-ix="4"><td>066</td><td>NASM linux x32</td><td>230623T151242Z</td><td><a href="https://codegolf.stackexchange.com/questions/262098/wrt-hello-world-prgrm-bt-wth-n-vwls/262118#262118">AnttiP</a></td></tr>
@@ -37,12 +37,25 @@
 <tr d-ix="8"><td>010</td><td>Jelly</td><td>230622T182732Z</td><td><a href="https://codegolf.stackexchange.com/questions/262098/wrt-hello-world-prgrm-bt-wth-n-vwls/262103#262103">Jonathan</a></td></tr>
 <tr d-ix="9"><td>002</td><td>Thunno 2 / Vyxal polyglots</td><td>230622T180535Z</td><td><a href="https://codegolf.stackexchange.com/questions/262098/wrt-hello-world-prgrm-bt-wth-n-vwls/262102#262102">The Thon</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/madeforlosers/yasepl-esolang" rel="nofollow noreferrer">YASEPL</a>, 48 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 166 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>F=!1+''
+T=!0+''
+V=[][0]+''
+b=F[1]
+f=F[4]
+j=V[5]
+v=V[0]
+p=(''+[][`f${j}nd`])[6]
+C=`c${p}nstr${v}ct${p}r`
+3[C][C](`c${p}ns${p}l${f}.l${p}g('H${f}ll${p}, W${p}rld!')`)()
+</code></pre>
+<p><a href="https://tio.run/##NYvLCoMwEEX38xUVAkmwLUofu1kJ0g8odhEGYrWWSrCi4ibk29NEKAxz7mHm9vVaz830GZfD8G1f3peY5CnncMcki6xQkcooxieWKifoAs4EPVbqQrAGZAQjCs7T8Ko7Zns3tJqkuhIUqBtmRzfMy8Ts6pol2qThpAoKI/7nuA2znTuaGN@C36KZzfa7x1YzbcKllkJ6/wM" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/madeforlosers/yasepl-esolang" rel="nofollow noreferrer">YASEPL</a>, 48 bytes</h1>
 <pre><code>=d#&quot;H&quot;$101›#&quot;ll&quot;+10›-67›#&quot; W&quot;+67›#&quot;rld&quot;-78›
 </code></pre>
 <p>i &lt;3 character codes</p>
-</div>
-<div id="pu1" class="pu"><p>Got it, MetaGolfScript-695337743287229800148806645588258 solution is 0 bytes</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 11 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>`HÁM, Wld!
