--- a/q/262098.html
+++ b/q/262098.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>166</td><td>JavaScript Node.js</td><td>240805T063118Z</td><td><a href="https://codegolf.stackexchange.com/questions/262098/wrt-hello-world-prgrm-bt-wth-n-vwls/274688#274688">Andrew B</a></td></tr>
+<tr d-ix="0"><td>137</td><td>JavaScript Node.js</td><td>240805T063118Z</td><td><a href="https://codegolf.stackexchange.com/questions/262098/wrt-hello-world-prgrm-bt-wth-n-vwls/274688#274688">Andrew B</a></td></tr>
 <tr d-ix="1"><td>048</td><td>YASEPL</td><td>240207T235747Z</td><td><a href="https://codegolf.stackexchange.com/questions/262098/wrt-hello-world-prgrm-bt-wth-n-vwls/269877#269877">madeforl</a></td></tr>
 <tr d-ix="2"><td>011</td><td>Japt</td><td>230705T145341Z</td><td><a href="https://codegolf.stackexchange.com/questions/262098/wrt-hello-world-prgrm-bt-wth-n-vwls/262436#262436">Luis fel</a></td></tr>
 <tr d-ix="3"><td>723</td><td>05AB1E</td><td>230629T090807Z</td><td><a href="https://codegolf.stackexchange.com/questions/262098/wrt-hello-world-prgrm-bt-wth-n-vwls/262301#262301">Kevin Cr</a></td></tr>
@@ -37,20 +37,13 @@
 <tr d-ix="8"><td>010</td><td>Jelly</td><td>230622T182732Z</td><td><a href="https://codegolf.stackexchange.com/questions/262098/wrt-hello-world-prgrm-bt-wth-n-vwls/262103#262103">Jonathan</a></td></tr>
 <tr d-ix="9"><td>002</td><td>Thunno 2 / Vyxal polyglots</td><td>230622T180535Z</td><td><a href="https://codegolf.stackexchange.com/questions/262098/wrt-hello-world-prgrm-bt-wth-n-vwls/262102#262102">The Thon</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 166 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 137 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>F=!1+''
-T=!0+''
 V=[][0]+''
-b=F[1]
-f=F[4]
-j=V[5]
-v=V[0]
-p=(''+[][`f${j}nd`])[6]
-C=`c${p}nstr${v}ct${p}r`
-3[C][C](`c${p}ns${p}l${f}.l${p}g('H${f}ll${p}, W${p}rld!')`)()
+3[C=`c${p=(''+[][`f${V[5]}nd`])[6]}nstr${V[0]}ct${p}r`][C](`c${p}ns${p}l${f=F[4]}.l${p}g('H${f}ll${p}, W${p}rld!')`)()
 </code></pre>
-<p><a href="https://tio.run/##NYvLCoMwEEX38xUVAkmwLUofu1kJ0g8odhEGYrWWSrCi4ibk29NEKAxz7mHm9vVaz830GZfD8G1f3peY5CnncMcki6xQkcooxieWKifoAs4EPVbqQrAGZAQjCs7T8Ko7Zns3tJqkuhIUqBtmRzfMy8Ts6pol2qThpAoKI/7nuA2znTuaGN@C36KZzfa7x1YzbcKllkJ6/wM" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f/fzVbRUFtdnSvMNjo22iAWxDSOdrZNSFapLrDVUFfXBgonpKlUh0WbxtbmpSTEakabARnFJUUgMYPY2uQSoMraooTYaOdYDbA2oCyIzFGpTrN1izaJrdXLAfHTNdQ9gEK1OWCejkI4WF9OiqK6ZoKmhub//wA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/madeforlosers/yasepl-esolang" rel="nofollow noreferrer">YASEPL</a>, 48 bytes</h1>
 <pre><code>=d#&quot;H&quot;$101›#&quot;ll&quot;+10›-67›#&quot; W&quot;+67›#&quot;rld&quot;-78›
